[package]
name = "pancake"
version = "0.1.0"
authors = ["whatot <whatot2@gmail.com>"]

[lib]
name = "pancake"

[[bin]]
name = "pancake-server"

[dependencies]
clap = "~2"
grpcio = "~0.2"
toml = "~0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
aws-sdk-rust = "~0.1"
url = "~1"
hyper = "0.10"

[dev-dependencies]
