[package]
name = "pancake"
version = "0.1.0"
authors = ["whatot <whatot2@gmail.com>"]
edition = "2021"

[lib]
name = "pancake"

[[bin]]
name = "pancake-server"

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "derive"] }
grpcio = "0.12.0"
toml = "0.5.9"
serde = "1"
serde_json = "1"
serde_derive = "1"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
aws-smithy-http = "0.51.0"
url = "2.3.1"
hyper = "0.14.22"
async-trait = "0.1.58"

[dev-dependencies]
